--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.apache.clerezza.ext', name: 'org.json.simple', version: '0.4'
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'com.h2database:h2'
 	// https://stackoverflow.com/questions/42839126/configurationproperties-spring-boot-configuration-annotation-processor-not-foun
 	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
 	// https://projectlombok.org
