--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 front-end-url=http://localhost:4200
 open-weather.apiKey=
 open-weather.apiBaseUrl=http://api.openweathermap.org/data/2.5
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:DEFAULT;INIT=CREATE SCHEMA IF NOT EXISTS WEATHER_APP
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+flyway.user=
+flyway.password=
+flyway.schemas=WEATHER_APP
+flyway.url=jdbc:h2:mem:DEFAULT
+
+spring.flyway.enabled=true
