prelim additions for geoloc and one call flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 front-end-url=http://localhost:4200
 open-weather.apiKey=
 open-weather.apiBaseUrl=http://api.openweathermap.org/data/2.5
+open-weather.apiGeoBaseUrl=http://api.openweathermap.org/geo/1.0
+open-weather.apiZipGeoBaseUrl=http://api.openweathermap.org/geo/1.0/zip?zip=
+open-weather.apiOneCallBaseUrl=https://api.openweathermap.org/data/2.5/onecall
 spring.datasource.url=jdbc:h2:mem:DEFAULT;INIT=CREATE SCHEMA IF NOT EXISTS WEATHER_APP
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=
